# self-updating-application

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/selfupdatingapplication/: info.py  main.py  now.py  update_check.py
