[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "self-updating-application"
version = "1.2.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A simple self-updating application"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]",
    "rich",
]

[project.urls]
"Homepage" = "https://github.com/michagrandel/self-updating-application"
"Bug Tracker" = "https://github.com/michagrandel/self-updating-application"
"Repository" = "https://github.com/michagrandel/self-updating-application"

[project.scripts]
hello = "selfupdatingapplication.main:app"
info = "selfupdatingapplication.info:main"
now = "selfupdatingapplication.now:main"
